--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/Anitta29/Project_3#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.11.14"
+    "mongoose": "^5.11.14",
+    "react-router-dom": "^5.2.0",
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
