--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "homepage": "https://github.com/Anitta29/Project_3#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.11.14",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.1.0",
     "web-vitals": "^1.1.0"
   },
   "devDependencies": {
