--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.11.14",
     "react-router-dom": "^5.2.0",
