--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.11.14",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.1.0",
     "web-vitals": "^1.1.0"
