--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "project_3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || set PORT=3333 && npm run start:dev",
-    "start:prod": "node server.js",
+    "start:prod": "node server/server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "seed": "node server/db/seed.js",
     "client": "cd client && npm run start",
