--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "jsonwebtoken": "^8.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.11.14",
+    "node-sass": "^4.14.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-image-gallery": "^1.0.9",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.1.0",
